# spot-feed

./: .dockerignore  Cargo.toml  Dockerfile  README.md  env.sample
migrations/: 001_init.sql
src/: config.rs  main.rs
src/api/: auth.rs  mod.rs  users.rs
src/db/: mod.rs
src/db/users/: model.rs  queries.rs
